@@ -5,8 +5,8 @@ Encoding=UTF-8
 Type=Application
 Terminal=true
 Icon[en_US]=gnome-app-install
-Name[en_US]=Install Academic Signature b52
-Comment=Install Academic Signature b52
+Name[en_US]=Install Academic Signature b53
+Comment=Install Academic Signature b53
 Exec=/home/amnesia/Persistent/Packages/install_acasig.sh
-Name=Install Academic Signature b52
+Name=Install Academic Signature b53
 Icon=gnome-app-install
