@@ -5,7 +5,7 @@ Encoding=UTF-8
 Type=Application
 Terminal=true
 Icon[en_US]=gnome-app-install
-Name[en_US]=Install OnionShare 0.7.1
+Name[en_US]=Install OnionShare 0.8
 Exec=/home/amnesia/Persistent/Packages/install_onionshare.sh
-Name=Install OnionShare 0.7.1
+Name=Install OnionShare 0.8
 Icon=gnome-app-install
