@@ -5,6 +5,12 @@ CHANGELOG
 IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
 *********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		
 
+December 8th 2015
+******************
+
+- Updated Onionshare to version 8.0
+- Bugfixes
+
 November 27th 2015
 ******************
 
